refactor(android): replace hardcoded strings with resources
Android App UI Audit - Batch 1:

DashboardScreen.kt:
- ✅ Replace hardcoded 'Settings' content description
- ✅ Replace 'No scans yet' and hint texts with string resources
- ✅ Replace 'Score: X' format with string resource
- ✅ Replace all Tool Card titles/subtitles with string resources
  (Trust Centre, Learning, Threat Database, Beat the Bot, Allowlist)

TrustCentreScreen.kt:
- ✅ Replace 'Back' content description with string resource

BeatTheBotScreen.kt:
- ✅ Replace 'Training Session' title with string resource
- ✅ Replace 'End Session' with string resource
- ✅ Replace 'Current Score', 'Streak' labels with string resources
- ✅ Replace 'Round X/Y' format with string resource
- ✅ Replace 'Phishing', 'Legitimate' button labels with resources
- ✅ Replace 'Quick Hint' title with string resource
- ✅ Fix all content descriptions for accessibility

strings.xml:
- Add dashboard_no_scans, dashboard_no_scans_hint, dashboard_score_fmt
- Add tool_* strings for dashboard tool cards
- Add cd_* strings for accessibility content descriptions
- Add training_session, end_session, streak, current_score
- Add round_progress_fmt, phishing, legitimate, mark_safe, etc.

All changes maintain existing layouts and functionality.
BUILD SUCCESSFUL - 58 actionable tasks

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -276,5 +276,44 @@
     <string name="auto_copy_subtitle">Copy safe URLs automatically</string>
     <string name="biometric_unlock_title">Biometric Unlock</string>
     <string name="biometric_unlock_subtitle">Require FaceID for settings</string>
+    
+    <!-- Dashboard Empty/Tool Cards -->
+    <string name="dashboard_no_scans">No scans yet</string>
+    <string name="dashboard_no_scans_hint">Scan a QR code to start building your history</string>
+    <string name="dashboard_score_fmt">Score: %1$d</string>
+    <string name="tool_trust_centre">Trust Centre</string>
+    <string name="tool_trust_centre_subtitle">Security settings</string>
+    <string name="tool_learning">Learning</string>
+    <string name="tool_learning_subtitle">Security training</string>
+    <string name="tool_threat_database">Threat Database</string>
+    <string name="tool_threat_database_subtitle">Manage signatures</string>
+    <string name="tool_beat_the_bot">Beat the Bot</string>
+    <string name="tool_beat_the_bot_subtitle">Test your skills</string>
+    <string name="tool_whitelisting">Allowlist</string>
+    <string name="tool_whitelisting_subtitle">Manage exceptions</string>
+    
+    <!-- Accessibility Navigation -->
+    <string name="cd_navigation_bar">Main navigation bar with 4 tabs: Home, Scan, History, and Settings</string>
+    <string name="cd_dashboard_screen">Dashboard home screen</string>
+    <string name="cd_scanner_screen">QR code scanner screen</string>
+    <string name="cd_history_screen">Scan history screen</string>
+    <string name="cd_settings_screen">Settings screen</string>
+    
+    <!-- Beat The Bot Screen -->
+    <string name="training_session">Training Session</string>
+    <string name="end_session">End Session</string>
+    <string name="current_score">Current Score</string>
+    <string name="streak">Streak</string>
+    <string name="round_progress_fmt">Round %1$d/%2$d</string>
+    <string name="next_advanced_phishing">Next: Advanced Phishing</string>
+    <string name="sms_from_fmt">From: %1$s</string>
+    <string name="login_page_preview">Login Page Preview</string>
+    <string name="preview">Preview</string>
+    <string name="phishing">Phishing</string>
+    <string name="report_threat">Report Threat</string>
+    <string name="legitimate">Legitimate</string>
+    <string name="mark_safe">Mark Safe</string>
+    <string name="quick_hint">Quick Hint</string>
+    <string name="cd_dismiss_hint">Dismiss hint</string>
 </resources>
 
